# Nooskewl_Engine

./: CMakeLists.txt  LICENSE.txt  README.txt  acknowledgements.txt  b.bat  br.bat  include.sublime-project  linux_cmake.sh  osx_cmake.sh  src.sublime-project  windows_cmake.bat  windows_icon.rc  windows_icon.res  windows_icon_gcc.res
include/: animation_set.h  audio.h  brain.h  cpa.h  dllist.h  error.h  floor_trigger.h  font.h  graphics.h  image.h  log.h  map.h  map_entity.h  map_logic.h  player_brain.h  resource_manager.h  script_functions.h  snprintf.h  speech.h  sprite.h  starsquatters.h  tga.h  tgui3.h  tilemap.h  tween.h  types.h  util.h  vertex_accel.h  video.h  widgets.h  xml.h
include/Nooskewl_Engine/: Nooskewl_Engine.h  a_star.h  audio.h  basic_types.h  brain.h  cpa.h  dllist.h  engine.h  engine_translation_English.h  error.h  font.h  global.h  graphics.h  gui.h  image.h  internal.h  inventory.h  item.h  load_dll.h  log.h  macosx.h  main.h  map.h  map_entity.h  map_logic.h  mml.h  module.h  mouse_cursor.xpm  player_brain.h  resource_manager.h  sample.h  shader.h  snprintf.h  sound.h  speech.h  spell.h  sprite.h  stats.h  talk_brain.h  tilemap.h  (+11 more)
include/ss/: map_logic.h  ml_test.h  ml_test2.h  tweens.h
src/: animation_set.cpp  audio.cpp  brain.cpp  cpa.cpp  dllist.cpp  floor_trigger.cpp  font.cpp  graphics.cpp  image.cpp  log.cpp  main.c  main.cpp  map.cpp  map_entity.cpp  map_logic.cpp  player_brain.cpp  resource_manager.cpp  script_functions.cpp  snprintf.cpp  speech.cpp  sprite.cpp  tga.c  tgui3.cpp  tilemap.cpp  tween.cpp  util.cpp  vertex_accel.cpp  video.cpp  widgets.cpp  xml.cpp
src/Nooskewl_Engine/: a_star.cpp  audio.cpp  brain.cpp  cpa.cpp  dllist.cpp  engine.cpp  font.cpp  global.cpp  graphics.cpp  gui.cpp  image.cpp  internal.cpp  inventory.cpp  item.cpp  load_dll.cpp  log.cpp  macosx.M  map.cpp  map_entity.cpp  map_logic.cpp  mml.cpp  module.cpp  player_brain.cpp  resource_manager.cpp  sample.cpp  script_functions.cpp  shader.cpp  snprintf.cpp  speech.cpp  spell.cpp  sprite.cpp  stats.cpp  talk_brain.cpp  tilemap.cpp  tokenizer.cpp  translation.cpp  tween.cpp  utf8.cpp  util.cpp  vertex_accel.cpp  (+4 more)
src/Nooskewl_Runner/: runner.cpp
src/lib/: audio.cpp  brain.cpp  cpa.cpp  dllist.cpp  engine.cpp  font.cpp  graphics.cpp  image.cpp  load_dll.cpp  log.cpp  map.cpp  map_entity.cpp  module.cpp  resource_manager.cpp  speech.cpp  sprite.cpp  tilemap.cpp  util.cpp  vertex_accel.cpp  video.cpp  widgets.cpp  xml.cpp
src/runner/: runner.cpp
src/ss/: map_logic.cpp  ml_test.cpp  ml_test2.cpp  tweens.cpp
tools/: gpl_to_pal.cpp  mkcpa.sh  rgblist_to_gpl.c  sort_rgblist_by_hue.cpp  uniq_unsorted.cpp
tools/cpa/: mkcpa-osx.sh  mkcpa-trent-windows.sh  mkcpa.sh
tools/palette/: makegpl.bat  mkpalimage.cpp  sort_rgblist_by_hue.cpp
tools/translation/: English.utf8  directories.txt  directories_mo3.txt  extract_strings.sh  print_strings.c  run.sh  run_mo3.sh  substring.c
